[package]
name = "alphaid"
version = "0.2.0"
authors = ["importcjj <importcjj@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "Generate Youtube-Like IDs with Rust"
repository = "https://github.com/importcjj/alphaid"
keywords = ["encode", "decode", "youtube", "hex", "basex"]
documentation = "https://docs.rs/alphaid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"
